Fix issue where text is overflowing from footer (#113)

--- a/eprihlaska/static/styles/main.css
+++ b/eprihlaska/static/styles/main.css
@@ -284,6 +284,58 @@ select.form-control + .chosen-container-multi .chosen-results li.result-selected
   cursor: default;
   background-color: white; }
 
+/*
+ * Responsive text aligning
+ * http://ohryan.ca/2014/08/14/set-responsive-text-alignment-bootstrap-3/
+ */
+.text-xs-left {
+  text-align: left; }
+
+.text-xs-right {
+  text-align: right; }
+
+.text-xs-center {
+  text-align: center; }
+
+.text-xs-justify {
+  text-align: justify; }
+
+@media (min-width: 768px) {
+  .text-sm-left {
+    text-align: left; }
+
+  .text-sm-right {
+    text-align: right; }
+
+  .text-sm-center {
+    text-align: center; }
+
+  .text-sm-justify {
+    text-align: justify; } }
+@media (min-width: 992px) {
+  .text-md-left {
+    text-align: left; }
+
+  .text-md-right {
+    text-align: right; }
+
+  .text-md-center {
+    text-align: center; }
+
+  .text-md-justify {
+    text-align: justify; } }
+@media (min-width: 1200px) {
+  .text-lg-left {
+    text-align: left; }
+
+  .text-lg-right {
+    text-align: right; }
+
+  .text-lg-center {
+    text-align: center; }
+
+  .text-lg-justify {
+    text-align: justify; } }
 body {
   font-family: "Open Sans", Helvetica, Arial, sans-serif;
   font-size: 14px;
@@ -305,11 +357,12 @@ a {
   font-size: 13px; }
 
 .footer {
-  height: 60px;
-  line-height: 60px;
+  padding: 22px 0;
   background-color: #4e2d2f;
   color: white;
   box-shadow: 0 0 24px rgba(0, 0, 0, 0.2); }
+  .footer a {
+    color: white; }
 
 .study-programme {
   border-bottom: 2px solid #de4e58;
